# openswitch-ops-lldpd

./: README.md  groups  project.config  reviewers.config
include/: lldp_vty.h
ops-tests/component/: test_lldpd_ct_counters_recovery.py  test_vtysh_ct_lldp.py
ops-tests/feature/: test_ft_lldp_basic_functionality.py  test_snmpbulkget_ft_lldp.py  test_snmpget_ft_lldp.py  test_snmpgetnext_ft_lldp.py  test_snmptrap_ft_lldp.py  test_snmptrap_ft_lldp_localhost.py  test_snmptrap_ft_lldp_tier2.py  test_snmpwalk_ft_lldp.py
ops/docs/: DESIGN.md  README.md
ops/tests/: lldp_ct_tests.md  test_lldpd_ct_call_libevent.py  test_lldpd_ct_counters_recovery.py
src/: LLDP_MIB_traps.c  lldpd-structs.c  marshal.c
src/cli/: Makefile.am  lldp_vty.c
src/daemon/: LLDP_MIB_traps.c  LLDP_MIB_traps.h  Makefile.am  event.c  interfaces-linux.c  lldp.c  lldpd.c  lldpd.h  lldpd_ovsdb_if.c  lldpd_ovsdb_if.h  lldpd_ovsdb_if_test.c
src/snmp/: CMakeLists.txt  LLDP_MIB_custom.c  Makefile.am
tests/: test_lldpd_ct_counters_recovery.py  test_vtysh_ct_lldp.py
